# Proyecto-I_DII_C-

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  conanfile.txt
Client/: Client_Socket.cpp  Client_Socket.h  Main Client.cpp  Server_Socket.cpp  Server_Socket.h  loggerC.cpp  loggerC.h
Documentation/html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CMakeCache_8txt.html  CMakeLists_8txt.html  Gcollector_8cpp.html  Gcollector_8cpp__incl.dot  Gcollector_8cpp__incl.map  Gcollector_8cpp__incl.md5  Gcollector_8h.html  Gcollector_8h__dep__incl.dot  Gcollector_8h__dep__incl.map  Gcollector_8h__dep__incl.md5  Gcollector_8h__incl.dot  Gcollector_8h__incl.map  Gcollector_8h__incl.md5  Gcollector_8h_source.html  Json__parser_8cpp.html  Json__parser_8cpp__incl.dot  Json__parser_8cpp__incl.map  Json__parser_8cpp__incl.md5  Json__parser_8h.html  Json__parser_8h__dep__incl.dot  Json__parser_8h__dep__incl.map  Json__parser_8h__dep__incl.md5  Json__parser_8h__incl.dot  Json__parser_8h__incl.map  Json__parser_8h__incl.md5  Json__parser_8h_source.html  LNode_8cpp.html  LNode_8cpp__incl.dot  LNode_8cpp__incl.map  LNode_8cpp__incl.md5  LNode_8h.html  LNode_8h__dep__incl.dot  LNode_8h__dep__incl.map  LNode_8h__dep__incl.md5  LNode_8h__incl.dot  LNode_8h__incl.map  LNode_8h__incl.md5  LNode_8h_source.html  (+590 more)
Documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  (+48 more)
InterfaceC!/Interface/: Interface.pro  Interface.pro.user.179f033  Interface.pro.user.c41c643.4.8-pre1  Json_parser.cpp  Json_parser.h  loggerI.cpp  loggerI.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  socket_client.cpp  socket_client.h
InterfaceC!/build-Interface-Desktop_Qt_5_9_1_GCC_64bit-Debug/: Interface  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
InterfaceC!/build-Interface-Desktop_Qt_6_0_3_GCC_64bit-Debug/: Makefile
InterfazC/: InterfazC.pro  mainwindow.cpp.autosave  mainwindow.h.autosave  mainwindow.ui
LoggerC/: logger.cpp  logger.h
Server/: Client_Socket.cpp  Client_Socket.h  Gcollector.cpp  Gcollector.h  LNode.cpp  LNode.h  Llist.cpp  Llist.h  Main Server.cpp  MemoryController.cpp  MemoryController.h  Parser.cpp  Parser.h  Scope.cpp  Scope.h  Server_Socket.cpp  Server_Socket.h  loggerS.cpp  loggerS.h
sizes/: Type size.cpp
